--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 
 <head>
 <title>Drift Dudes Unblocked</title>
+<link rel="canonical" href="https://ubg17.github.io/DriftDudes/" />
+<script>
+  window.location= "https://ubg17.github.io/DriftDudes/";
+</script>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="mobile-web-app-capable" content="yes">
